Ensure that FakeSelect doesn't wrap.

--- a/assets/src/components/FakeSelect/fake-select.scss
+++ b/assets/src/components/FakeSelect/fake-select.scss
@@ -5,6 +5,7 @@
 	line-height: 51px;
 	padding: 0 56px 0 20px;
 	position: relative;
+	white-space: nowrap;
 
 	.select2-selection__arrow {
 		height: 50px;
